name:                fork-updater
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Andraz Bajt
maintainer:          edofic@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable fork-updater
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base       >=4.7  && <4.8
                     , github     >=0.11 && <0.12
                     , process    >=1.2  && <1.3
                     , directory  >=1.2  && <1.3
                     , bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
